syntax = "proto3";
package commercionetwork.commercionetwork.did;
import "commercionetwork/did/didDocument.proto";

// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/commercionetwork/commercionetwork/x/did/types";

// GenesisState defines the id module's genesis state.
message GenesisState {
  // this line is used by starport scaffolding # genesis/proto/state
  repeated DidDocumentNew did_documents = 1;
}
